--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "main": "app.js",
     "scripts": {
         "start": "nodemon -e js --exec \"node app.js\"",
-        "heroku-postbuild": "cd client && yarn install && yarn build",
-        "client": "cd client && yarn start",
+        "client": "cd client && npm start",
         "server": "nodemon app.js"
     },
     "author": "Hemakshi Sachdev",
