--- a/package.json
+++ b/package.json
@@ -30,15 +30,17 @@
         "dotenv": "^6.1.0",
         "express": "^4.16.3",
         "express-session": "^1.17.3",
-        "formidable": "^1.2.2",
+        "formidable": "^1.2.6",
         "fs": "^0.0.1-security",
-        "fs-extra": "^10.0.0",
+        "fs-extra": "^10.1.0",
         "ftp": "^0.3.10",
         "ftp-client": "^0.2.2",
         "image-to-base64": "^2.2.0",
         "json2csv": "^5.0.6",
         "jsonwebtoken": "^8.3.0",
         "mongoose": "^5.7.5",
+        "multer": "^1.4.5-lts.1",
+        "multiparty": "^4.2.3",
         "node-cron": "^3.0.0",
         "node-fetch": "^2.6.6",
         "nodejs-file-downloader": "^4.6.0",
